<resources>
    <string name="app_name">SmartHome</string>
    <string name="title_temp_settings">Temperature Settings</string>
    <string name="title_add_device">Add Device</string>
    <string name="title_device_manager">Device Manager</string>
    <string name="title_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="start">Start</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign in</string>
    <string name="login">Login</string>
    <string name="log_in">Log in</string>
    <string name="forgot_pass">Forgot password?</string>
    <string name="forgot_password">Forgot password</string>
    <string name="back_button_description">Back button in LoginActivity</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="start_text_upper">Manage your home wherever you are in the world</string>
    <string name="start_text_lower">Click Start and see for yourself.</string>
    <string name="no_account">Don’t have an account?</string>
    <string name="edit_text_email_description">Custom input of entering Email in LoginActivity</string>
    <string name="edit_text_password_description">Custom input of entering Password in LoginActivity</string>
    <string name="wrong_password">Wrong password or email. Try again or reset your /n password.</string>
    <string name="full_name">Full Name</string>
    <string name="set_password">Set Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="continue_btn">Continue</string>
    <string name="enter_email_address">Enter the email address</string>
    <string name="submit">Submit</string>
    <string name="verification">VERIFICATION</string>
    <string name="enter_the_code">Enter the code we sent to</string>
    <string name="re_send">Re-send</string>
    <string name="no_receive_code">Don’t receive code ?</string>
    <string name="eti_ap">etiap22@gmail.com</string>
    <string name="create_your_new_password">Create your new password</string>
    <string name="character_minimum">8 characters minimum</string>
    <string name="enter_password">Enter password</string>
    <string name="password_characters">password is less than 8 characters</string>
    <string name="password_is_different">password is different</string>
    <string name="massage_created_account_upper">Your account</string>
    <string name="massage_created_account_lower">was been successfully created!</string>
    <string name="massage_succesfully_password_changed_upper">Your password was been</string>
    <string name="massage_succesfully_password_changed_lower">successfully changed!</string>
    <string name="return_to_home_screen">Return to home screen</string>
    <string name="massage_error_upper">Oops, something went wrong.</string>
    <string name="massage_error_lower">We are already working on a solution</string>
    <string name="temperature_settings">Temperature settings</string>
    <string name="mode">Mode</string>
    <string name="hot">Hot</string>
    <string name="cold">Cold</string>
    <string name="normal">Normal</string>
    <string name="adjust_the_air_upper">Adjust the air conditioner temperature to</string>"
    <string name="adjust_the_air_lower">suit you</string>
    <string name="set_the_temperature">Set the temperature</string>
    <string name="register_text_upper">Write about yourself</string>
    <string name="regiser_text_lower">so we can find your new account</string>
    <string name="text_below_circle_upper">Adjust the air conditioner temperature to</string>
    <string name="text_below_circle_lower">suit you</string>
    <string name="search_device">Search device</string>
    <string name="motion_sensor">Motion sensor</string>
    <string name="door_sensor">Door sensor</string>
    <string name="temperature_sensor">Temperature sensor</string>
    <string name="not_found_device_upper">Not found</string>
    <string name="not_found_device_lower">device?</string>
    <string name="select_manually">Select manually</string>
    <string name="add_device">Add device</string>
    <string name="device_manager">Device manager</string>
    <string name="profile">Profile</string>
    <string name="zigbee">Zigbee</string>
    <string name="information_and_management_upper">Information and management</string>
    <string name="information_and_management_lower">of your smart home</string>
    <string name="climate">Climate</string>
    <string name="climate_c">° С</string>
    <string name="door_is">Door is</string>
    <string name="close">close</string>
    <string name="open">open</string>
    <string name="steps">Steps</string>
    <string name="do_not_found">don\'t found</string>
    <string name="found">found</string>
    <string name="used_electricity">Used electricity</string>
    <string name="kwh_of">kwh of</string>
    <string name="test_number_kwh">100.5</string>
    <string name="test_2_number_kwh">200</string>
    <string name="kwh">kwh</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="hello_">Hello,</string>
    <string name="andrii">Andrii</string>
    <string name="you_have_devices_on_left">You have</string>
    <string name="you_have_devices_value">3</string>
    <string name="you_have_devices_on_right">devices currently on</string>
    <string name="card_profile_energy_upper">Current Energy Usage</string>
    <string name="card_profile_value">2.1</string>
    <string name="k_W">kW</string>
    <string name="k_W_h">kWh</string>
    <string name="value_k_W_h">48</string>
    <string name="dollar">$</string>
    <string name="dollar_value">5.20</string>
    <string name="_hr_usage">24-Hr Usage</string>
    <string name="estimated_cost">Estimated Cost</string>
    <string name="card_profile_static_inf">Your home\'s power draw at this moment.</string>
    <string name="time_test">12:41 AM</string>
    <string name="view_details">View detail</string>
    <string name="settings">Settings</string>
    <string name="a">Device manager</string>
    <string name="help">Help</string>
    <string name="notifications">Notifications</string>
    <string name="activity_has">Activity has</string>
    <string name="been">been</string>
    <string name="detected">detected</string>
    <string name="attention_someone_was_walking">Attention! Someone was walking in the room while the</string>
    <string name="door_was">door was</string>
    <string name="closed">closed</string>
    <string name="attention_someone_tried_to">Attention! Someone tried to</string>
    <string name="the_door">the door</string>
    <string name="reduce_the">Reduce the</string>
    <string name="temperature">temperature</string>
    <string name="attention_reduce_the_temperature_as_it_is_too">Attention! Reduce the temperature as it is too</string>
    <string name="high">high</string>


    <string name="logout">Logout</string>


    <string name="test_code_1">2</string>
    <string name="test_code_2">5</string>
    <string name="test_code_3">3</string>
    <string name="test_code_4">7</string>
    <string name="description_editCode1">Edit Text for Code Verification</string>
    <string name="description_editCode2">Edit Text for Code Verification2</string>
    <string name="description_editCode3">Edit Text for Code Verification3</string>
    <string name="description_editCode4">Edit Text for Code Verification4</string>


    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="text_inside_circle_symbol">Text inside circle symbol</string>
</resources>